
 * `ObjectAdmin` does introspeciton on properties to see if they have a setter defined

 * `EntityAdmin` does introspection on hybrid attributes to look for default field attributes

 * `camelot.view.filters` module has been moved to :mod:`camelot.admin.action.list_filter`

 * Remove 'delete_mode' and 'save_mode' Admin attributes, as this behavour can is customizable with actions.

Release 13.04.13
----------------

 * Uses SQLAlchemy 0.8.0
 
 * All default models migrated from Elixir to Declarative
 
 * Replacements for most of the Elixir functions that are compatible with
   Declarative
   
 * Search splits search strings between spaces and searches for a combination of the elements
 
 * Russian translations
 
 * The :class:`camelot.model.batch_job.BatchJob` is reworked to have more robust error handling, and
   a batch job becomes useable as a context manager
 
 * Decouple the :class:`camelot.core.memento.SqlMemento` from :class:`camelot.model.memento.Memento`,
   so the change tracking system becomes customizable.
   
 * List of changes can be accessed from the form view
 
 * Support for using an existing database through SQLAlchemy reflection

 * Primary key columns are not editable by default
 
 * Documents in print preview can be edited before printing
 
 * Import and export have configurable columns
 
 * Add :class:`camelot.view.action_steps.print_preview.PrintChart` action step.
 
 * Adapt printing of charts to matplotlib 1.0
 
 * Fix `maximum` field attribute of rating fields in editor and delegate.
 
 * Workaround for form window hiding on Mac
 
 * The frozen columns feature has been removed in favor of the column groups
 
 * The embedded form has been removed in favour of :meth:`camelot.admin.object_admin.ObjectAdmin.get_compounding_objects`
 
 * Unittests cover 80% of the code
 
 * See :ref:`migrate-13.04.13` for documentation on how to upgrade an 
   existing Camelot project to 13.04.13. 

Release 12.06.29
----------------
